--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/styles.css">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <h1>Calendar</h1>
@@ -13,7 +14,7 @@
             <!-- Calendar header -->
             <header>
                 <button id="prev">&lt;</button>
-                <h2 id="currentDate"> August 2024</h2>
+                <h2 class="currentDate" id="currentDate"></h2>
                 <button id="next">&gt;</button>
             </header>
             
@@ -29,41 +30,7 @@
                     <li>Sat</li>
                 </ul>
                 <ul class="days">
-                    <li class="inactive">28</li>
-                    <li class="inactive">29</li>
-                    <li class="inactive">30</li>
-                    <li class="inactive">31</li>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li class="active">8</li>
-                    <li>9</li>
-                    <li>10</li>
-                    <li>11</li>
-                    <li>12</li>
-                    <li>13</li>
-                    <li>14</li>
-                    <li>15</li>
-                    <li>16</li>
-                    <li>17</li>
-                    <li>18</li>
-                    <li>19</li>
-                    <li>20</li>
-                    <li>21</li>
-                    <li>22</li>
-                    <li>23</li>
-                    <li>24</li>
-                    <li>25</li>
-                    <li>26</li>
-                    <li>27</li>
-                    <li>28</li>
-                    <li>29</li>
-                    <li>30</li>
-                    <li class="inactive">1</li>
+                    
                 </ul>
             </div>
         </div>
